--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -33,6 +33,10 @@
   font-size: 42px;
   line-height: 48px;
   margin: 0;
+
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .profile__pen {
