--- a/pages/index.css
+++ b/pages/index.css
@@ -2,6 +2,7 @@
 @import url("../blocks/page.css");
 @import url("../blocks/avatar.css");
 @import url("../blocks/profile.css");
+@import url("../blocks/main.css");
 @import url("../blocks/card.css");
 @import url("../blocks/collection.css");
 @import url("./fonts.css");
