--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,15 +1,16 @@
 .card {
-  min-width: 282px;
-  min-height: 361px;
+  max-width: 282px;
+  max-height: 361px;
   background: #ffffff;
   border-radius: 10px;
   box-sizing: border-box;
-  margin: 0;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .card__image {
-  min-width: 282px;
-  min-height: 282px;
+  width: 282px;
+  height: 282px;
   border-radius: 10px 10px 0px 0px;
   margin: 0;
 }
