--- a/blocks/collection.css
+++ b/blocks/collection.css
@@ -5,3 +5,21 @@
   column-gap: 17px;
   row-gap: 20px;
 }
+
+@media screen and (min-width: 544px) and (max-width: 1024px) {
+  .collection {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    max-width: 581px;
+  }
+}
+
+@media screen and (max-width: 544px) {
+  .collection {
+    display: grid;
+    grid-template-columns: 1fr;
+    padding: 36px 19px 48px 19px;
+    column-gap: 17px;
+    row-gap: 20px;
+  }
+}
