--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,6 +1,7 @@
 .footer {
-  min-width: 318px;
-  min-height: 18px;
+  /*min-width: 318px;
+  min-height: 18px;*/
+  width: 100%;
 }
 
 .footer__text {
@@ -13,4 +14,19 @@
   color: #545454;
   padding-left: 200px;
   margin: 0;
+}
+
+@media screen and (max-width: 544px) {
+  .footer__text {
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 22px;
+    width: 288px;
+    color: #545454;
+    padding-left: 19px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
