--- a/blocks/avatar.css
+++ b/blocks/avatar.css
@@ -1,11 +1,10 @@
-.avatar {
+/*.avatar {
   width: 168.75px;
   height: 127.5px;
-}
+} */
 
-.avatar__image {
+.avatar {
   width: 120px;
   height: 120px;
   border-radius: 50%;
-  margin: 3.75px 26.25px 3.75px 22.5px;
 }
