--- a/pages/index.css
+++ b/pages/index.css
@@ -2,9 +2,10 @@
 @import url("../blocks/page.css");
 @import url("../blocks/avatar.css");
 @import url("../blocks/profile.css");
+@import url("../blocks/side.css");
 @import url("../blocks/main.css");
 @import url("../blocks/card.css");
-@import url("../blocks/collection.css");
+@import url("../blocks/content.css");
 @import url("./fonts.css");
 @import url("../blocks/header.css");
 @import url("../blocks/footer.css");
