--- a/blocks/content.css
+++ b/blocks/content.css
@@ -5,3 +5,14 @@
   row-gap: 20px;
   max-width: 880px;
 }
+
+@media screen and (min-width: 544px) and (max-width: 1024px) {
+  .content {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 17px;
+    row-gap: 20px;
+    max-width: 581px;
+    align-items: center;
+  }
+}
