--- a/blocks/content.css
+++ b/blocks/content.css
@@ -4,15 +4,19 @@
   column-gap: 17px;
   row-gap: 20px;
   max-width: 880px;
+  align-items: center;
 }
 
-@media screen and (min-width: 544px) and (max-width: 1024px) {
+@media screen and (max-width: 1024px) {
   .content {
-    display: grid;
     grid-template-columns: repeat(2, 1fr);
-    column-gap: 17px;
-    row-gap: 20px;
     max-width: 581px;
-    align-items: center;
+  }
+}
+
+@media screen and (max-width: 544px) {
+  .content {
+    grid-template-columns: 1fr;
+    max-width: 282px;
   }
 }
