--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -46,6 +46,9 @@
   box-sizing: border-box;
 }
 
+.profile__pen:hover {
+  opacity: 0.6;
+}
 .profile__name-tag {
   font-family: "Inter";
   font-style: normal;
@@ -66,7 +69,11 @@
   box-sizing: border-box;
 }
 
-@media screen and (min-width: 544px) and (max-width: 1024px) {
+.profile__add-button:hover {
+  opacity: 0.6;
+}
+
+@media screen and (max-width: 1024px) {
   .profile__add-button {
     height: 50px;
     width: 150px;
@@ -75,5 +82,72 @@
     border-radius: 2px;
     margin: 0px 0px 0px 70px;
     box-sizing: border-box;
+  }
+}
+
+@media screen and (max-width: 544px) {
+  .profile {
+    max-width: 320px;
+    display: flex;
+    align-content: center;
+    flex-direction: column;
+  }
+
+  .profile__info {
+    gap: 14px;
+  }
+
+  .profile__avatar {
+    margin: 0 0 30px 0;
+  }
+
+  .profile__name {
+    color: white;
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 22px;
+    line-height: 27px;
+    margin: 0;
+    max-width: 192px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+  }
+
+  .profile__pen {
+    padding: 5.25px;
+    border: 1px solid #ffffff;
+    width: 18px;
+    height: 18px;
+    border: 1px solid #ffffff;
+    box-sizing: border-box;
+  }
+
+  .profile__add-button {
+    height: 50px;
+    width: 282px;
+    padding: 14px 64px 14px 64px;
+    border: 2px solid #ffffff;
+    border-radius: 2px;
+    margin: 36px auto 0 auto;
+    box-sizing: border-box;
+  }
+
+  .profile__name-pen {
+    display: flex;
+    gap: 10px;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .profile__name-tag {
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 22px;
+    color: #ffffff;
+    margin: auto;
   }
 }
