--- a/pages/index.css
+++ b/pages/index.css
@@ -1,3 +1,8 @@
+@import url("https://rsms.me/inter/inter.css");
+html {
+  font-family: "Inter", sans-serif;
+}
+
 @import url("./normalize.css");
 @import url("../blocks/page.css");
 @import url("../blocks/avatar.css");
