--- a/blocks/content.css
+++ b/blocks/content.css
@@ -1,13 +1,24 @@
 .content {
+  /*
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   column-gap: 17px;
   row-gap: 20px;
-  max-width: 880px;
-  align-items: center;
+  max-width: 880px;*/
+  /*align-items: center;*/
+  /*display: grid;
+  row-gap: 17px;
+  grid-template-columns: repeat(auto-fill, minmax(282px, 1fr));*/
+  /*align-content: space-around;
+  justify-content: center;*/
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 17px;
+  row-gap: 20px;
+  justify-content: center;
 }
 
-@media screen and (max-width: 1024px) {
+/*@media screen and (max-width: 1024px) {
   .content {
     grid-template-columns: repeat(2, 1fr);
     max-width: 581px;
@@ -20,3 +31,4 @@
     max-width: 282px;
   }
 }
+*/
