--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -11,13 +11,13 @@
   font-size: 18px;
   line-height: 22px;
   color: #545454;
-  margin: 0;
+  margin: 0 0 60px 0;
 }
 
 @media screen and (max-width: 544px) {
   .footer__text {
     font-size: 14px;
     line-height: 17px;
-    margin: 0;
+    margin: 0 0 36px 0;
   }
 }
