--- a/blocks/content.css
+++ b/blocks/content.css
@@ -1,34 +1,23 @@
 .content {
-  /*
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  column-gap: 17px;
-  row-gap: 20px;
-  max-width: 880px;*/
-  /*align-items: center;*/
-  /*display: grid;
-  row-gap: 17px;
-  grid-template-columns: repeat(auto-fill, minmax(282px, 1fr));*/
-  /*align-content: space-around;
-  justify-content: center;*/
   display: flex;
   flex-wrap: wrap;
   column-gap: 17px;
   row-gap: 20px;
   justify-content: center;
+  max-width: 880px;
+  width: 100%;
 }
 
-/*@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1024px) {
   .content {
-    grid-template-columns: repeat(2, 1fr);
     max-width: 581px;
+    justify-content: space-between;
+    margin: auto;
   }
 }
 
-@media screen and (max-width: 544px) {
+@media screen and (max-width: 700px) {
   .content {
-    grid-template-columns: 1fr;
     max-width: 282px;
   }
 }
-*/
