--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,6 +1,5 @@
 .footer {
-  /*min-width: 318px;
-  min-height: 18px;*/
+  max-width: 880px;
   width: 100%;
 }
 
@@ -11,13 +10,21 @@
   font-size: 18px;
   line-height: 22px;
   color: #545454;
-  margin: 0 0 60px 0;
+  margin: 67px 0 60px 0;
 }
 
-@media screen and (max-width: 544px) {
+@media screen and (max-width: 1024px) {
+  .footer__text {
+    margin: 67px auto 60px auto;
+    max-width: 581px;
+  }
+}
+
+@media screen and (max-width: 700px) {
   .footer__text {
     font-size: 14px;
     line-height: 17px;
-    margin: 0 0 36px 0;
+    margin: 48px auto 36px auto;
+    max-width: 282px;
   }
 }
