--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,7 +1,7 @@
 .header {
   display: flex;
   flex-direction: column;
-  margin: 0;
+  width: 100%;
 }
 
 .header__image {
@@ -9,22 +9,11 @@
   height: 33px;
   padding-top: 45px;
   padding-bottom: 41px;
-  margin-right: auto;
 }
 
 .header__line {
   border-top: 1px solid #545454;
   flex-grow: 1;
-  max-width: 880px;
   line-height: 0px;
-  padding: 0;
-  margin: 0;
-}
-
-@media screen and (max-width: 544px) {
-  .header__image {
-    padding-top: 28px;
-    padding-left: 27px;
-    padding-bottom: 32px;
-  }
+  width: 100%;
 }
