--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -1,7 +1,8 @@
 .profile {
-  max-width: 880px;
   display: flex;
-  align-items: center;
+  width: 100%;
+  padding: 40px 0 50px 0;
+  margin: 0;
   justify-content: space-between;
 }
 
@@ -13,7 +14,7 @@
 }
 
 .profile__avatar {
-  margin: 0 30px 0 0;
+  margin: 0 0 0 0;
 }
 
 .profile__name-pen {
@@ -31,7 +32,7 @@
   font-size: 42px;
   line-height: 48px;
   margin: 0;
-  max-width: 373px;
+
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
@@ -64,8 +65,9 @@
   padding: 14px 64px 14px 64px;
   border: 2px solid #ffffff;
   border-radius: 2px;
-  margin: 0px 0px 0px 165px;
+  margin: 0px 0px 0px 0px;
   box-sizing: border-box;
+  align-self: center;
 }
 
 .profile__add-button:hover {
@@ -79,17 +81,17 @@
     padding: 14px 64px 14px 64px;
     border: 2px solid #ffffff;
     border-radius: 2px;
-    margin: 0px 0px 0px 70px;
     box-sizing: border-box;
   }
 }
 
-@media screen and (max-width: 544px) {
+@media screen and (max-width: 700px) {
   .profile {
     max-width: 320px;
     display: flex;
     align-content: center;
     flex-direction: column;
+    margin: auto;
   }
 
   .profile__info {
@@ -97,7 +99,7 @@
   }
 
   .profile__avatar {
-    margin: 0 0 30px 0;
+    margin: 0 auto 30px auto;
   }
 
   .profile__name {
@@ -107,8 +109,6 @@
     font-weight: 500;
     font-size: 22px;
     line-height: 27px;
-    margin: 0;
-    max-width: 192px;
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
@@ -135,8 +135,7 @@
   .profile__name-pen {
     display: flex;
     gap: 10px;
-    justify-content: space-between;
-    align-items: center;
+    justify-content: center;
   }
 
   .profile__name-tag {
