--- a/pages/index.css
+++ b/pages/index.css
@@ -1,16 +1,12 @@
 @import url("https://rsms.me/inter/inter.css");
-@import url("./normalize.css");
+@import url("../vendor/normalize.css");
+@import url("../blocks/body.css");
 @import url("../blocks/page.css");
 @import url("../blocks/avatar.css");
 @import url("../blocks/profile.css");
 @import url("../blocks/side.css");
 @import url("../blocks/card.css");
 @import url("../blocks/content.css");
-@import url("./fonts.css");
+@import url("../vendor/fonts/fonts.css");
 @import url("../blocks/header.css");
 @import url("../blocks/footer.css");
-
-.body {
-  background: black;
-  box-sizing: content-box;
-}
