--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -4,7 +4,7 @@
 }
 
 .footer__text {
-  font-family: "Inter";
+  font-family: "Inter", "Arial", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -13,6 +13,7 @@
   margin: 67px 0 60px 0;
 }
 
+/*
 @media screen and (max-width: 1024px) {
   .footer__text {
     margin: 67px auto 60px auto;
@@ -20,7 +21,8 @@
   }
 }
 
-@media screen and (max-width: 720px) {
+*/
+@media screen and (max-width: 620px) {
   .footer__text {
     font-size: 14px;
     line-height: 17px;
