--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -10,17 +10,18 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 16px;
+  gap: 8px;
+  padding-left: 8px;
+  box-sizing: border-box;
 }
 
 .profile__avatar {
-  margin: 0 0 0 0;
+  margin: 0;
 }
 
 .profile__name-pen {
   display: flex;
-  /*gap: 18px;*/
-  gap: 10px;
+  gap: 18px;
   justify-content: space-between;
   align-items: center;
   justify-items: center;
@@ -28,23 +29,27 @@
 
 .profile__name {
   color: white;
-  font-family: "Inter";
+  font-family: "Inter", "Arial", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 42px;
   line-height: 48px;
   margin: 0;
-
+  max-width: 373px;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
 }
 
 .profile__pen {
-  padding: 7px;
+  background: url("../images/pen.svg");
   width: 24px;
   height: 24px;
+  background-size: 7px 7px;
   border: 1px solid #ffffff;
+  background-repeat: no-repeat;
+  background-position: center;
+  align-self: center;
   box-sizing: border-box;
 }
 
@@ -52,7 +57,7 @@
   opacity: 0.6;
 }
 .profile__name-tag {
-  font-family: "Inter";
+  font-family: "Inter", "Arial", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -68,43 +73,39 @@
 }
 
 .profile__add-button {
-  height: 50px;
+  background: url("../images/plus.svg");
   width: 150px;
-  padding: 14px 64px 14px 64px;
+  height: 50px;
   border: 2px solid #ffffff;
   border-radius: 2px;
-  margin-bottom: 12px;
-  box-sizing: border-box;
+  background-repeat: no-repeat;
+  background-position: center;
   align-self: center;
-  justify-content: space-around;
 }
 
 .profile__add-button:hover {
   opacity: 0.6;
 }
 
-@media screen and (max-width: 1024px) {
-  .profile__add-button {
-    height: 50px;
-    width: 150px;
-    padding: 14px 64px 14px 64px;
-    border: 2px solid #ffffff;
-    border-radius: 2px;
-    box-sizing: border-box;
+/*Adjust the profile__info block, so that the profile
+elements do not overlap*/
+@media screen and (max-width: 740px) {
+  .profile__info {
+    max-width: 70%;
+  }
+
+  .profile__name-pen {
+    align-items: center;
   }
 }
 
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 620px) {
   .profile {
-    max-width: 320px;
     display: flex;
     align-content: center;
     flex-direction: column;
     margin: auto;
-  }
-
-  .profile__info {
-    gap: 14px;
+    padding: 42px 0 36px 0;
   }
 
   .profile__avatar {
@@ -112,48 +113,31 @@
   }
 
   .profile__name {
-    color: white;
-    font-family: "Inter";
-    font-style: normal;
     font-weight: 500;
     font-size: 22px;
     line-height: 27px;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
   }
 
   .profile__pen {
-    padding: 5.25px;
-    border: 1px solid #ffffff;
     width: 18px;
     height: 18px;
-    box-sizing: border-box;
   }
 
   .profile__add-button {
-    height: 50px;
     width: 282px;
-    padding: 14px 64px 14px 64px;
-    border: 2px solid #ffffff;
-    border-radius: 2px;
+    height: 50px;
     margin: 36px auto 0 auto;
-    box-sizing: border-box;
   }
 
   .profile__name-pen {
-    display: flex;
     gap: 10px;
     justify-content: center;
+    width: 100%;
   }
 
   .profile__name-tag {
-    font-family: "Inter";
-    font-style: normal;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 22px;
-    color: #ffffff;
+    font-size: 14px;
+    line-height: 27px;
     margin: auto;
   }
 
@@ -162,5 +146,9 @@
     margin: auto;
     width: 100%;
     justify-content: space-between;
+  }
+
+  .profile__info {
+    max-width: 100%;
   }
 }
