--- a/blocks/content.css
+++ b/blocks/content.css
@@ -1,7 +1,13 @@
 /*
 Advanced layout technique, instead of media queries
 https://web.dev/patterns/layout/repeat-auto-minmax/
+
+I will work on using this advanced technique later.
+When I start working start by uncommenting the code above.
+As per reviewer, this looks all correct, except the 
+list-style-type: none is missing. 
 */
+
 /*
 .content {
   display: grid;
@@ -15,39 +21,32 @@ https://web.dev/patterns/layout/repeat-auto-minmax/
   margin: auto;
 }
 */
-/*
-TO REVIEWER: 
-------------
-I tried using the above commented technique. 
-While it is easy, I had to adjust a lot of other
-elements (specifically profile elements). 
-So I ended up using flex-box. Please share
-your solution based on the technique mentioned by you:
-https://web.dev/patterns/layout/repeat-auto-minmax/
-*/
 
 .content {
+  width: 100%;
+}
+
+.content__list {
   display: flex;
   flex-wrap: wrap;
   column-gap: 17px;
   row-gap: 20px;
   justify-content: center;
   max-width: 880px;
-  width: 100%;
   list-style-type: none;
   padding: 0;
   margin: 0;
 }
 
 @media screen and (max-width: 1024px) {
-  .content {
+  .content__list {
     max-width: 581px;
     margin: auto;
   }
 }
 
 @media screen and (max-width: 620px) {
-  .content {
+  .content__list {
     max-width: 282px;
     /*Increase the size of the content so that it puts
     the picture blocks in one column*/
