--- a/blocks/header.css
+++ b/blocks/header.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  border-bottom: 1px solid rgba(54, 54, 54, 0.7);
+  border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
 
 .header__image {
@@ -16,7 +16,8 @@
   .header__image {
     width: 126px;
     height: 24px;
-    padding-top: 42px;
-    padding-bottom: 36px;
+    padding-top: 28px;
+    padding-bottom: 32px;
+    margin-left: 27px;
   }
 }
