--- a/pages/index.css
+++ b/pages/index.css
@@ -8,3 +8,4 @@
 @import url("../blocks/content.css");
 @import url("../blocks/header.css");
 @import url("../blocks/footer.css");
+@import url("../blocks/modal.css");
