--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -1,6 +1,4 @@
 .modal {
-  /*display: flex;*/
-  display: none;
   width: 100vw;
   height: 100vh;
   flex-direction: column;
@@ -13,6 +11,10 @@
   z-index: 1;
   justify-content: center;
   align-items: center;
+}
+
+.modal__open {
+  display: none;
 }
 
 .modal__container {
