--- a/blocks/content.css
+++ b/blocks/content.css
@@ -31,7 +31,7 @@ list-style-type: none is missing.
   flex-wrap: wrap;
   column-gap: 17px;
   row-gap: 20px;
-  justify-content: center;
+  justify-content: flex-start;
   max-width: 880px;
   list-style-type: none;
   padding: 0;
