--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,5 +1,6 @@
 .card {
   max-width: 282px;
+  /*max-height: 361px;*/
   background: #ffffff;
   border-radius: 10px;
   box-sizing: border-box;
@@ -8,6 +9,8 @@
 .card__image {
   border-radius: 10px 10px 0px 0px;
   display: block;
+  width: 282px;
+  height: 282px;
 }
 
 .card__label {
