--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -52,6 +52,7 @@
   align-self: center;
   box-sizing: border-box;
   flex-shrink: 0;
+  cursor: pointer;
 }
 
 .profile__pen:hover {
@@ -83,6 +84,7 @@
   background-position: center;
   align-self: center;
   background-size: 22px 22px;
+  cursor: pointer;
 }
 
 .profile__add-button:hover {
