--- a/pages/index.css
+++ b/pages/index.css
@@ -8,4 +8,4 @@
 @import url("../blocks/content.css");
 @import url("../blocks/header.css");
 @import url("../blocks/footer.css");
-@import url("../blocks/modal.css");
+@import url("../blocks/profile-modal.css");
