--- a/blocks/add-card-modal.css
+++ b/blocks/add-card-modal.css
@@ -1,11 +1,12 @@
-.profile-modal {
+.add-card-modal {
   min-width: 480px;
   min-height: 380px;
   display: flex;
   flex-direction: column;
+  gap: 5px;
 }
 
-.profile-modal__content {
+.add-card-modal__content {
   display: flex;
   flex-direction: column;
   max-width: 430px;
@@ -17,7 +18,7 @@
   margin: auto;
 }
 
-.profile-modal__heading {
+.add-card-modal__heading {
   font-family: "Inter";
   font-style: normal;
   font-weight: 900;
@@ -28,13 +29,13 @@
   color: #000000;
 }
 
-.profile-modal__form {
+.add-card-modal__form {
   display: flex;
   flex-direction: column;
   margin: 0 36px 54px 36px;
 }
-/*
-.profile-modal__text {
+
+.add-card-modal__title-text {
   font-family: "Inter";
   font-style: normal;
   font-weight: 400;
@@ -42,13 +43,19 @@
   line-height: 17px;
   color: #000000;
   border: 0;
+  /*outline: none will remove border display when trying to enter text*/
   outline: none;
   margin: 0 0 13px 0;
   width: 358px;
   padding: 0;
+}
+
+/*
+.add-card-modal__text::placeholder {
+  color: #c4c4c4;
 }*/
 
-.profile-modal__name-text {
+.add-card-modal__image-url {
   font-family: "Inter";
   font-style: normal;
   font-weight: 400;
@@ -63,35 +70,20 @@
   padding: 0;
 }
 
-.profile-modal__job-text {
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 17px;
-  color: #000000;
-  border: 0;
-  /*outline: none will remove border display when trying to enter text*/
-  outline: none;
-  margin: 0 0 13px 0;
-  width: 358px;
-  padding: 0;
-}
-
-.profile-modal__name-line {
+.add-card-modal__name-line {
   flex-grow: 1;
   opacity: 0.2;
   border-bottom: 1px solid #000000;
   margin: 0 0 30px 0;
 }
-.profile-modal__description-line {
+.add-card-modal__image-url-line {
   flex-grow: 1;
   opacity: 0.2;
   border-bottom: 1px solid #000000;
   margin: 0 0 48px 0;
 }
 
-.profile-modal__button {
+.add-card-modal__button {
   width: 358px;
   height: 50px;
   background: #000000;
@@ -108,7 +100,7 @@
   cursor: pointer;
 }
 
-.profile-modal__close {
+.add-card-modal__close {
   background: url("../images/close_icon.svg");
   width: 50px;
   height: 50px;
@@ -122,12 +114,12 @@
   top: 10px;
 }
 
-.profile-modal__button:hover {
+.add-card-modal__button:hover {
   background-color: rgba(0, 0, 0, 0.8);
   transition: background-color 0.1s linear 0.1s;
 }
 
-.profile-modal__close:hover {
+.add-card-modal__close:hover {
   opacity: 0.6;
 }
 
@@ -135,7 +127,7 @@
   .content__list {
     max-width: 282px;
     /*Increase the size of the content so that it puts
-      the picture blocks in one column*/
+        the picture blocks in one column*/
     padding: 0 20px;
   }
 
