--- a/blocks/card.css
+++ b/blocks/card.css
@@ -6,11 +6,31 @@
   box-sizing: border-box;
 }
 
-.card__image {
-  border-radius: 10px 10px 0px 0px;
-  display: block;
+.card__image-and-delete {
+  display: flex;
   width: 282px;
   height: 282px;
+  position: relative;
+}
+
+.card__image {
+  border-radius: 10px 10px 0px 0px;
+  max-width: 100%;
+  max-height: 100%;
+  flex-grow: 1;
+}
+
+.card__delete {
+  background: url("../images/delete.svg");
+  width: 20px;
+  height: 20px;
+  border: none;
+  background-repeat: no-repeat;
+  cursor: pointer;
+  position: absolute;
+  top: 18px;
+  left: 250px;
+  z-index: 1;
 }
 
 .card__label {
@@ -47,5 +67,18 @@
 }
 
 .card__heart:hover {
+  opacity: 0.5;
+}
+
+.card__heart-like {
+  background: url("../images/like.svg");
+  width: 21px;
+  height: 18px;
+  border: none;
+  background-repeat: no-repeat;
+  cursor: pointer;
+}
+
+.card__heart-like:hover {
   opacity: 0.5;
 }
