--- a/pages/index.css
+++ b/pages/index.css
@@ -10,3 +10,4 @@
 @import url("../blocks/footer.css");
 @import url("../blocks/modal.css");
 @import url("../blocks/profile-modal.css");
+@import url("../blocks/add-card-modal.css");
