--- a/pages/index.css
+++ b/pages/index.css
@@ -11,3 +11,4 @@
 @import url("../blocks/modal.css");
 @import url("../blocks/profile-modal.css");
 @import url("../blocks/add-card-modal.css");
+@import url("../blocks/image-modal.css");
