sprint 5 first submission

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -82,6 +82,7 @@
 */
 .card__heart_like {
   background: url("../images/like.svg");
+  background-repeat: no-repeat;
 }
 
 .card__heart-like:hover {
