--- a/blocks/profile-modal.css
+++ b/blocks/profile-modal.css
@@ -34,6 +34,15 @@
   margin: 0 36px 54px 36px;
 }
 
+.profile-modal__label {
+  display: flex;
+  flex-direction: column;
+  /*the position must be relative to make the error message's 
+  absolute position is relative to the label. 
+  See profile-modal__error*/
+  position: relative;
+}
+
 .profile-modal__name-text {
   font-family: "Inter";
   font-style: normal;
@@ -94,6 +103,24 @@
   cursor: pointer;
 }
 
+.profile-modal__button-disabled {
+  width: 358px;
+  height: 50px;
+  background: #000000;
+  border-radius: 2px;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  text-align: center;
+  color: #ffffff;
+  padding: 0;
+  border: 0;
+  opacity: 0.2;
+  cursor: default;
+}
+
 .profile-modal__close {
   background: url("../images/close_icon.svg");
   width: 50px;
@@ -115,6 +142,23 @@
 
 .profile-modal__close:hover {
   opacity: 0.6;
+}
+
+.profile-modal__form-error {
+  position: absolute;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 15px;
+  color: #ff0000;
+  top: 35px;
+  /*Hide the error element initially*/
+  visibility: hidden;
+}
+
+.profile-modal__form-error_display {
+  visibility: visible;
 }
 
 @media screen and (max-width: 620px) {
