--- a/blocks/add-card-modal.css
+++ b/blocks/add-card-modal.css
@@ -34,6 +34,32 @@
   margin: 0 36px 54px 36px;
 }
 
+.add-card-modal__label {
+  display: flex;
+  flex-direction: column;
+  /*the position must be relative to make the error message's 
+  absolute position is relative to the label. 
+  See profile-modal__error*/
+  position: relative;
+}
+
+.add-card-modal__form-error {
+  position: absolute;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 15px;
+  color: #ff0000;
+  top: 35px;
+  /*Hide the error element initially*/
+  visibility: visible;
+}
+
+.add-card-modal__form-error_display {
+  visibility: visible;
+}
+
 .add-card-modal__title-text {
   font-family: "Inter";
   font-style: normal;
@@ -92,6 +118,24 @@
   padding: 0;
   border: 0;
   cursor: pointer;
+}
+
+.add-card-modal__button-disabled {
+  width: 358px;
+  height: 50px;
+  background: #000000;
+  border-radius: 2px;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  text-align: center;
+  color: #ffffff;
+  padding: 0;
+  border: 0;
+  cursor: default;
+  opacity: 0.2;
 }
 
 .add-card-modal__close {
