--- a/blocks/add-card-modal.css
+++ b/blocks/add-card-modal.css
@@ -117,25 +117,13 @@
   color: #ffffff;
   padding: 0;
   border: 0;
-  cursor: pointer;
+  opacity: 0.2;
+  cursor: default;
 }
 
-.add-card-modal__button-disabled {
-  width: 358px;
-  height: 50px;
-  background: #000000;
-  border-radius: 2px;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 22px;
-  text-align: center;
-  color: #ffffff;
-  padding: 0;
-  border: 0;
-  cursor: default;
-  opacity: 0.2;
+.add-card-modal__button_enable {
+  opacity: unset;
+  cursor: pointer;
 }
 
 .add-card-modal__close {
